# distributed-systems

./: .gitignore  README.md
00-docker-examples/01-building-go-app/: config.json  go.mod  main.go
00-docker-examples/02-docker-compose/: Dockerfile  docker-compose.yml  go.mod  main.go
01-mpi/: README.md  Vagrantfile
01-mpi/docker/: Dockerfile  docker-compose.yaml
01-mpi/docker/scripts/: entrypoint.sh  utils.sh
01-mpi/scripts/: install.sh
01-mpi/templates/: config  id_rsa  id_rsa.pub
01-mpi/workspace/: CMakeLists.txt
01-mpi/workspace/apps/: CMakeLists.txt
01-mpi/workspace/apps/include/: application.hpp
01-mpi/workspace/apps/src/: application.cpp  main.cpp
02-mq/: README.md  docker-compose.yml
02-mq/message-processor-service/: Dockerfile
02-mq/message-sender-service/: Dockerfile
02-mq/message-storage-service/: Dockerfile
03-kubernetes/: README.md
